<resources>
    <string name="app_name">Don\'t Eat Alone</string>
    <string name="facebook_app_id">160470204481557</string>
    <string name="fb_login_protocol_scheme">fb160470204481557</string>
    <string name="formatted_place_data">
         %1$s, %2$s
    </string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="continute">Tiếp tục</string>
    <string name="send_again">Gửi lại mã xác thực</string>
    <string name="finish">Hoàn thành</string>
    <string name="verify_code">Mã xác thực</string>
    <string name="name">Tên đầy đủ</string>
    <string name="edit">Chỉnh Sửa</string>
    <string name="read">Đọc</string>
    <string name="delete">Xóa</string>
    <string name="man">Nam</string>
    <string name="woman">Nữ</string>
    <string name="address">Địa Chỉ \t</string>
    <string name="my_characters">Tính cách \t</string>
    <string name="my_styles">Phong cách \t</string>
    <string-array name="food">
        <item>	Ăn vặt	</item>
        <item>	Bánh mì	</item>
        <item>	Bánh ngọt	</item>
        <item>	BBQ	</item>
        <item>	Buffet	</item>
        <item>	Các món bún	</item>
        <item>	Các món ăn phương tây	</item>
        <item>	Các món ăn Hàn Quốc	</item>
        <item>	Các món ăn Nhật Bản	</item>
        <item>	Các món ăn Thái Lan	</item>
        <item>	Các món ăn Trung Quốc	</item>
        <item>	Các món ăn Truyền thống	</item>
        <item>	Các món chay	</item>
        <item>	Các món gỏi	</item>
        <item>	Các món hấp	</item>
        <item>	Các món kho	</item>
        <item>	Các món nướng	</item>
        <item>	Các món rán	</item>
        <item>	Các món xào	</item>
        <item>	Các sản phẩm từ sữa	</item>
        <item>	Carry	</item>
        <item>	Cơm	</item>
        <item>	Hải sản	</item>
        <item>	Hamburger	</item>
        <item>	Hủ tiếu	</item>
        <item>	Kim chi	</item>
        <item>	Lẩu	</item>
        <item>	Các món mì	</item>
        <item>	Món ăn đường phố	</item>
        <item>	Món ăn truyền thống	</item>
        <item>	Mức	</item>
        <item>	Phở	</item>
        <item>	Pizza	</item>
        <item>	Sandwich	</item>
        <item>	Súp/Cháo	</item>
        <item>	Sushi	</item>
        <item>	Thịt bò	</item>
        <item>	Thịt cá	</item>
        <item>	Thịt gà	</item>
        <item>	Thịt lợn	</item>
        <item>	Thịt nướng	</item>
        <item>	Thịt vịt	</item>
        <item>	Thức ăn nhanh	</item>
        <item>	Trái cây	</item>
        <item>	Bia	</item>
        <item>	Café	</item>
        <item>	Kem	</item>
        <item>	Nước ép trái cây	</item>
        <item>	Nước ngọt	</item>
        <item>	Rượu	</item>
        <item>	Sinh tố	</item>
        <item>	Trà	</item>
        <item>	Trà Sữa	</item>
    </string-array>
    <string name="target_food">Thích món ăn \t</string>
    <string name="target_character">Tính cách \t</string>
    <string name="target_style">Phong cách \t</string>
    <string name="live_in">Sống tại \t</string>
    <string name="phone_is">Số điện thoại \t</string>
    <string name="btn_ok">OK</string>
    <string name="view_profile">Xem Trang cá nhân</string>
    <string name="accept">Chấp nhận</string>
    <string name="refuse">Từ chối</string>
    <string name="my_target">Đối tượng của tôi</string>
    <string name="your_target">Đối tượng của \t</string>
    <string name="feedback">Nhận xét</string>
    <string name="write_feedback">Viết nhận xét...</string>
    <string name="gender">Giới tính</string>
    <string name="dob">DoB</string>
    <string name="DOB">Ngày sinh</string>
    <string name="date">Thời gian</string>
    <string name="place">Địa điểm</string>
    <string name="done">Xong</string>
    <string name="age">tuổi</string>
    <string name="all">Tất cả</string>
    <string name="point">100%</string>
    <string name="select_option">Tùy Chọn</string>
    <string name="delete_image">Xóa ảnh</string>
    <string name="insert_image">Chèn ảnh</string>
    <string name="insert_content">Chèn nội dung</string>
    <string name="login_title">Đăng nhập</string>
    <string name="new_here_create_an_account">Tạo tài khoản DEA mới</string>
    <string name="remember_me">Lưu tài khoản</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="forgot_password_title">Thay đổi mật khẩu</string>
    <string name="forgot_password_suggest_phone">Nhập số điện thoại của bạn để nhận mã xác thực tài khoản</string>
    <string name="forgot_password_suggest_code">Nhập mã xác thực đã gửi đến số điện thoại của bạn</string>
    <string name="forgot_password_suggest_finish">Xác thực thành công. Tạo ngay mật khẩu mới cho tài khoản của bạn</string>
    <string name="invalid_phone">Số điện thoại không hợp lệ, phải bắt đầu bằng 0, gồm 10 hoặc 11 số</string>
    <string name="empty_phone">Bạn cần phải nhập số điện thoại</string>
    <string name="phone_isnt_exist">Số điện thoại này không tồn tại. Hãy đăng ký tài khoản mới</string>
    <string name="phone_exists">Tài khoản đã tồn tại</string>
    <string name="invalid_password">Mật khẩu không hợp lệ</string>
    <string name="empty_password">Bạn cần phải nhập mật khẩu</string>
    <string name="password_incorecct">Mật khẩu bạn nhập không chính xác, Vui lòng kiểm tra lại</string>
    <string name="password_length">Mật khẩu phải dài hơn 5 ký tự</string>
    <string name="invalid_name">Tên của bạn không hợp lệ</string>
    <string name="empty_name">Bạn cần phải nhập tên đầy đủ của bạn</string>
    <string name="empty_gender">Bạn phải chọn giới tính của bạn</string>
    <string name="invalid_age">Độ tuổi của bạn không hợp lệ. Ứng dụng yêu cầu người dùng phải lớn hơn 15 tuổi.</string>
    <string name="empty_address">Bạn phải cung cấp địa chỉ của bạn</string>
    <string name="invalid_verify">Mã xác thực không đúng</string>
    <string name="empty_verify">Bạn chưa nhập mã xác thực</string>
    <string name="empty_blog_title">Bạn phải nhập Tiêu đề blog</string>
    <string name="not_save">Lưu thất bại. Vui lòng thử lại sau.</string>
    <string name="not_update">Cập nhật thông tin thất bại. Vui lòng thử lại sau.</string>
    <string name="not_update_yet">Thông tin không có gì để cập nhật</string>
    <string name="basic_information">Thông tin cơ bản</string>
    <string name="advanced_information">Thông tin nâng cao</string>
    <string name="target_information">Thông tin đối tượng</string>
    <string name="empty_time_session">Khung giờ này đã hết thời gian đặt bàn</string>
    <string name="was_reserve">Lựa chọn của bạn đã bị trùng, vui lòng chọn lựa chọn khác.</string>
    <string name="error_reserve">Bạn chưa đặt được bàn, vui lòng thử lại.</string>
    <string name="choose_session">Bạn chưa chọn buổi đặt bàn</string>
    <string name="choose_time_session">Bạn chưa chọn thời gian đến</string>
    <string name="empty_no_restaurant">Không tìm được nhà hàng nào hợp lệ</string>
    <string name="empty_restaurant">Bạn chưa đặt nhà hàng nào vào thời gian này, hãy chọn tab restaurant để tiến hành đặt chỗ trước</string>
    <string name="invalid_network">Mạng không khả dụng. Vui lòng kiểm tra kết nối internet</string>
    <string name="register_fail">Đăng ký thất bại. Vui lòng thử lại</string>
    <string name="deny_camera">Ứng dụng cần được cấp quyền truy cập Camera</string>
    <string name="deny_read_storage">Ứng dụng cần được cấp quyền truy cập thư mục lưu trữ</string>
    <string name="dont_find_image">Không thể tìm thấy ứng dụng cắt chỉnh ảnh.</string>
    <string name="not_support_crop">Thiết bị này không hỗ trợ thao tác cắt ảnh</string>
    <string name="register_step_1_title">Nhập Số Điện Thoại Của Bạn.</string>
    <string name="register_step_1_suggest">Bạn sẽ sử dụng số điện thoại này để đăng nhập hoặc khi cần đặt lại mật khẩu.</string>
    <string name="register_step_1_send_virify_code">Gửi mã xác thực đến điện thoại của tôi</string>
    <string name="register_step_2_title_name">Tên Của Bạn Là Gì?</string>
    <string name="register_step_2_suggest_name">Sử dụng tên thật của bạn giúp mọi người dễ dàng nhận ra bạn hơn.</string>
    <string name="register_step_2_title_password">Chọn Mật Khẩu</string>
    <string name="register_step_2_suggest_password">Hãy nhớ mật khẩu này. Mật khẩu giúp ngăn người lạ sử dụng tài khoản của bạn.</string>
    <string name="register_step_3_title">Hãy Chọn Giới Tính Của Bạn</string>
    <string name="register_step_3_title_2">Hãy Thêm Ảnh Đại Diện Của Bạn</string>
    <string name="register_step_3_suggest">Cung cấp giới tính của bạn tạo ra trải nghiệm DEA tốt nhất cho bạn.</string>
    <string name="register_step_3_suggest_2">Chọn ảnh đại diện để mọi người dễ dàng nhận ra bạn hơn.</string>
    <string name="register_step_4_title">Sinh Nhật Của Bạn Khi Nào?</string>
    <string name="register_step_4_suggest">Độ tuổi là một yếu tố quan trọng để tìm ra người bạn phù hợp cùng đi ăn chung.</string>
    <string name="register_step_5_title">Bạn Đang Sống Ở Đâu?</string>
    <string name="register_step_5_suggest">Sử dụng địa chỉ thật giúp bạn dễ dàng tìm gặp những người dùng ở gần bạn.</string>
    <string name="register_step_6_title">Bạn Là Người Như Thế Nào?</string>
    <string name="register_step_6_suggest">Miêu tả Tính cách và Phong cách của bạn giúp mang đến những trải nghiệm tốt nhất cho bạn.</string>
    <string name="register_step_7_title">Đối Tượng Của Bạn Như Thế Nào?</string>
    <string name="register_step_7_suggest">Miêu tả về đối tượng của bạn về Tính Cách, Phong Cách và Món Ăn mà bạn mong muốn sẽ cùng trải nghiệm với người đó.</string>
    <string name="blog">Blog</string>
    <string name="blog_status_1">Hôm nay bạn thế nào?</string>
    <string name="blog_status_2">Bạn đang nghĩ gì?</string>
    <string name="blog_title">Tiêu đề blog</string>
    <string name="blog_suggest">Viết blog để chia sẻ cảm giác hiện tại và giúp mọi người hiểu hơn về bạn.</string>
    <string name="blog_post">Đăng</string>
    <string name="blog_delete">Bạn có chắc chắn muốn xóa blog này không?</string>
    <string name="blog_delete_confirm">Xoá</string>
    <string name="blog_delete_title">Xóa blog</string>
    <string name="notification">Thông báo</string>
    <string name="notification_suggest">Hiện tại, bạn chưa nhận được bất kỳ thông báo nào.</string>
    <string name="accept_content">\t đã chấp nhận lời mời của bạn. Hãy liên hệ với bạn ấy qua số điện thoại: %1$s</string>
    <string name="refuse_content">\t đã từ chối lời mời của bạn. Hãy tìm kiếm một người phù hợp hơn với bạn</string>
    <string name="invite_content">\t đã mời bạn đi ăn với bạn ấy. Hãy trả lời bạn ấy trước 5 phút nhé.</string>
    <string name="sorry">Xin lỗi!</string>
    <string name="offline">đã ngoại tuyến</string>
    <string name="offline_notification_content">Bạn vui lòng tìm một người khác để cùng đi ăn hoặc có thể thử liên lạc trực tiếp qua số điện thoại.</string>
    <string name="profile">Trang cá nhân</string>
    <string name="profile_like">Thích</string>
    <string name="profile_dating">Lần hẹn</string>
    <string name="profile_star">Thả tim</string>
    <string name="edit_profile">Chỉnh sửa trang cá nhân</string>
    <string name="profile_history">Lịch sử cuộc hẹn</string>
    <string name="profile_history_suggest">Bạn hiện chưa có bất kỳ cuộc hẹn nào. Sau khi bạn hẹn người khác cùng đi ăn thành công. Lịch sử cuộc hẹn sẽ được ghi lại tại đây.</string>
    <string name="no_comment">Chưa có đánh giá nào</string>
    <string name="no_reservation_restaurant">Quán nổi bật</string>
    <string name="reservation_restaurant">Đặt chỗ trước</string>
    <string name="default_image_contentDescription">Don\'t Eat Alone</string>
    <string name="logout">Đăng xuất</string>
    <string name="logout_content">Bạn chắc chắn muốn thoát khỏi ứng dụng này?</string>
    <string name="ok">Thoát</string>
    <string name="cancel">Hủy</string>
</resources>