<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot_password_title"
            android:textColor="@color/color_deep_orange"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/custom_dialog_forgetpassword_rl_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:background="@drawable/ripple_selector"
            android:padding="6dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/default_image_contentDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_close_grey600_36dp" />
        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/custom_dialog_forgetpassword_ll_container_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_info_64"
                android:paddingBottom="15dp"
                android:text="@string/forgot_password_suggest_phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/custom_dialog_forgetpassword_edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_solid_white"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/grey" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/custom_dialog_forgetpassword_btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:text="@string/continute"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/custom_dialog_forgetpassword_ll_container_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_info_64"
                android:paddingBottom="15dp"
                android:text="@string/forgot_password_suggest_code"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/custom_dialog_forgetpassword_edt_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_solid_white"
                android:inputType="phone"
                android:maxLines="1"
                android:hint="@string/verify_code"
                android:padding="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/grey" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/custom_dialog_forgetpassword_btn_okcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:text="@string/continute"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/custom_dialog_forgetpassword_txt_receivecodeagain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/send_again"
                android:textColor="@color/dot_tutorial_active"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/custom_dialog_forgetpassword_ll_container_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_info_64"
                android:paddingBottom="15dp"
                android:text="@string/forgot_password_suggest_finish"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/custom_dialog_forgetpassword_edt_newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_solid_white"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/grey" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/custom_dialog_forgetpassword_btn_finish"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:text="@string/finish"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>