<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/color_deep_orange"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:text="@string/logout"
        android:textSize="18dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="15dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:text="@string/logout_content"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_login"
            android:text="@string/ok"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_login"
            android:text="@string/cancel"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>