<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--Set content below here-->
    <LinearLayout
        android:id="@+id/fragment_register_step2_ll_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <!--Name tutorial text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/register_step_2_title_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_step_2_suggest_name"
            android:textColor="@color/dot_tutorial_inactive"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15" />

        <!--content name-->
        <com.app.donteatalone.utils.CustomTextInputLayout
            android:id="@+id/til_error_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/fragment_register_step2_edt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_solid_white"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

        </com.app.donteatalone.utils.CustomTextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

        <!--Password tutorial text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/register_step_2_title_password"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_step_2_suggest_password"
            android:textColor="@color/dot_tutorial_inactive"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15" />

        <com.app.donteatalone.utils.CustomTextInputLayout
            android:id="@+id/til_error_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/fragment_register_step2_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_solid_white"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                app:fontPath="fonts/Montserrat-Medium.ttf" />

        </com.app.donteatalone.utils.CustomTextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4" />

        <!--Set Button Next-->
        <Button
            android:id="@+id/fragment_register_step2_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/continute"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>